@@ -33,17 +33,17 @@ open TMP, '>', $tmp_name;
 print TMP $string;
 close TMP;
 
-my $pid = fork_and_exec(exec => "cat",
-			from_string => \$string,
-			to_string => \$string2);
+my $pid = spawn(exec => "cat",
+		from_string => \$string,
+		to_string => \$string2);
 
 ok($pid);
 
 is($string2, $string, "{from,to}_string");
 
-$pid = fork_and_exec(exec => "cat",
-		     from_handle => $tmp_fh,
-		     to_handle => $tmp2_fh);
+$pid = spawn(exec => "cat",
+	     from_handle => $tmp_fh,
+	     to_handle => $tmp2_fh);
 
 ok($pid);
 
@@ -55,11 +55,11 @@ close TMP;
 
 is($string2, $string, "{from,to}_handle");
 
-$pid = fork_and_exec(exec => "cat",
-		     from_file => $tmp_name,
-		     to_file => $tmp2_name,
-		     wait_child => 1,
-		     timeout => 5);
+$pid = spawn(exec => "cat",
+	     from_file => $tmp_name,
+	     to_file => $tmp2_name,
+	     wait_child => 1,
+	     timeout => 5);
 
 ok($pid);
 
@@ -70,9 +70,9 @@ close TMP;
 is($string2, $string, "{from,to}_file");
 
 eval {
-    $pid = fork_and_exec(exec => ["sleep", "10"],
-		         wait_child => 1,
-		         timeout => 5);
+    $pid = spawn(exec => ["sleep", "10"],
+	         wait_child => 1,
+	         timeout => 5);
 };
 ok($@, "fails on timeout");
 
